--- a/index.html
+++ b/index.html
@@ -20,10 +20,20 @@
         </div>
        
     </div>
+  
     <div class="data-div">
-        <div class="month"  id="mon">month</div>
-           <div class="date" id="datee">Date</div>
-              <div class="year" id="yearss">Years</div>
+      <div>
+        <div class="month"  id="mon"></div>
+        <h2>month</h2>
+      </div>
+        <div>
+           <div class="date" id="dayss"></div>
+           <h2>Days</h2>
+           </div>
+           <div>
+              <div class="year" id="yearss"></div>
+              <h2>Years</h2>
+</div>
 
     </div>
     
